--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
 *{
     display: flex;
     flex-direction: column;
+    text-align: center;
    
 }
 head {
@@ -20,34 +21,38 @@ main{
    
 }
 
+
 heading{
+
     width: 60%;
     align-self: center;
-    
- 
 }
+input[type=radio] {
+    display: inline;
+}
+
 main,heading{
     background: rgba(255, 255, 255, 0.877);
     background-size: auto auto;
     overflow: scroll;
-    border: gray 3px solid;
-    border-radius: 3px;
-    margin-bottom: 3%;
 }
-.startButton, .nextButton, .restartButton, .submitButton {
+button,main,heading{
+    border: rgba(128, 128, 128, 0.658) 3px solid;
+    border-radius: 8px;
+    margin-bottom: 4%;
+}
+button {
+    margin-top: 15px;
     background:navy;
     color: white;
     font-size: 28px;
-}
-button{
-    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     align-self: center;
-    text-align: center;
 }
+
 li{
-    flex-direction: row;
     font-size: 36px;
-    align-self: center;
     color:navy;
 }
 .second-line{
@@ -55,7 +60,6 @@ li{
 }
 
 h2,h1,ul{
-   text-align: center;
    margin-top: 1%;
    font-family: 'Playfair Display', serif;
 }
@@ -94,11 +98,7 @@ body{
     align-self: center;
 }
 
-.startButton>h3{
-    margin-left: auto;
-    margin-right: auto;
-    width: 179px;
-}
+
 .animatedShake{
         /* Start the shake animation and make the animation last for 0.5 seconds */
         animation: shake 0.3s; 
@@ -122,10 +122,11 @@ body{
 }
 
 
-@media screen and (max-width: 615px) {
+@media screen and (min-width: 499px) {
 h1{
     font-size: 60px;
-};
+}
+
 }
 @media screen and (max-width: 498px) {
     h1{
@@ -134,6 +135,10 @@ h1{
     h2{
         font-size: 26px; 
     }
+    input[type=radio]{
+        padding: 5px; 
+    }
+
 }
 
 @media screen and (max-width: 320px) {
@@ -143,4 +148,9 @@ h1{
         li{
         font-size: 20px;
         }
+        
+        .second-line,.first-line{
+            font-size: 26px;
+        }
+        
 }
