--- a/main.css
+++ b/main.css
@@ -112,11 +112,11 @@ flex-direction: column;
     margin: -450px auto;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.937);
-    border: solid 2px #00245E;
+    box-shadow: 0px 0px 2px 4px rgba(0, 36, 94, 0.298);
     padding: 20px
 }
 button{
-    border: #067546 4px solid;
+    box-shadow: 0px 0px 1px 2px rgba(0, 36, 94, 0.298);
     margin: 5%;
 }
 button{
@@ -283,4 +283,8 @@ h1{
     .bottom-banner{
         flex-direction: row;
     }
+    .image-bottom{
+        max-width: 390px;
+        margin-right: 5%;
+        margin-left: 0
 }
