--- a/main.css
+++ b/main.css
@@ -108,16 +108,16 @@ flex-direction: column;
 .main-quiz{
     width: 70%;
     height: 350px;
-    overflow: hidden;
+    overflow: scroll;
     margin: -450px auto;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.937);
     box-shadow: 0px 0px 2px 4px rgba(0, 36, 94, 0.298);
-    padding: 20px
+    padding: 15px
 }
 button{
     box-shadow: 0px 0px 1px 2px rgba(0, 36, 94, 0.298);
-    margin: 5%;
+    margin: 2%;
 }
 button{
     border-radius: 8px;
