--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ main{
 width: 100%;
 padding: 0; 
 margin:0;
-height: 500px 
+height: 500px;
 }
 .bottom-banner{
     margin: 5% auto 5% auto;
@@ -168,6 +168,7 @@ input{
 }
 
 h1{
+   padding-top:2%;
     color: white;
     display: inline-block;
 }
